--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 							<article class="post featured">
 								<header class="major">
 									<!--<span class="date">April 25, 2017</span>-->
-									<h2><a href="https://public.tableau.com/views/AirBnBFullProjectTableau_17239891055450/Dashboard1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link">Airbnb tableau project<br />
+									<h2><a href="https://github.com/shijubharathan1234/Airbnb-Data-Analysis-Dashboard-using-Tableau">Airbnb tableau project<br />
 									</a></h2>
 									<p>I conducted a data analysis project on Airbnb listings using Tableau to
 										 identify trends and insights that could help hosts optimize their pricing
@@ -64,9 +64,9 @@
 										   I visualized key metrics such as average bedroom prices, and price distribution across zipcodes. The analysis revealed factors influencing pricing,
 										 including location, number of bed, number of bedrooms and their demand, for hosts to maximize revenue based on market trends.</p>
 								</header>
-								<a href="https://public.tableau.com/views/AirBnBFullProjectTableau_17239891055450/Dashboard1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" class="image main"><img src="images/tableauairbnb.png" alt="" /></a>
+								<a href="https://github.com/shijubharathan1234/Airbnb-Data-Analysis-Dashboard-using-Tableau" class="image main"><img src="images/tableauairbnb.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://public.tableau.com/views/AirBnBFullProjectTableau_17239891055450/Dashboard1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" class="button large">View project</a></li>
+									<li><a href="https://github.com/shijubharathan1234/Airbnb-Data-Analysis-Dashboard-using-Tableau" class="button large">View project</a></li>
 								</ul>
 							</article>
 
